<resources>
    <string name="app_name">AWPM</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course__details">Course_Details</string>
    <string name="filter_title">Filtermöglichkeiten</string>

    // strings info fragment
    <string name="global_info">Alle Informationen ohne Gewähr. Bitte beachten Sie die jeweiligen Aushänge der Fakultät für angewandte Natur- und Geisteswissenschaften</string>
    <string name="info_links">Links zu den Informationsseiten der Fakultät für angewandte Natur- und Geisteswissenschaften</string>
    <string name="info_link_wue">Abteilung Würzburg</string>
    <string name="info_link_sw">Abteilung Schweinfurt</string>

    // http strings


    // strings timeframes fragmente
    <string name="active">Aktiv !</string>
    <string name="notActive">Inaktiv !</string>
    <string name="regWindow">Anmeldezeitraum :</string>
    <string name="catchUpWindow">Nachmeldung :</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bis">bis</string>

    //strings CourseDetailsActivity
    <string name="description">Inhalt</string>
    <string name="location">\n\nOrt:\u0020</string>
    <string name="appointments">\nTermine:\u0020</string>
    <string name="blocked">\nGesperrt:\u0020</string>
    <string name="examnumber">\nPrüfungs-#:\u0020</string>
    <string name="appearance">\nAnwesenheitspflicht:\u0020</string>
    <string name="teacher">\nDozent:\u0020</string>
    <string name="examType">\nPrüfung:\u0020</string>
    <string name="participants">\nStimmen\u0020/\u0020max. Teilnehmerzahl\u0020</string>
    <string name="start">\nStart der Veranstaltung:\u0020</string>
    <string name="end">\nEnde der Veranstaltung:\u0020</string>
    <string name="favorite">"%1$s wurde als \'Favorit' markiert!"</string>
    <string name="nonFavorite">"%1$s wurde als \'kein Favorit' markiert!"</string>
    <string name="voted">"%1$s wurde als \'gewählt' markiert!"</string>
    <string name="notvoted">"%1$s wurde als \'nicht gewählt' markiert!"</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_filter">FilterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //login strings
    <string name="login_text">Login notwendig</string>
    <string name="k_num_hint">K-Nummer</string>
    <string name="pwd_hint">Passwort</string>
    <string name="login">Login</string>
    <string name="cancel">Abbrechen</string>

    //warning strings
    <string name="missingPwd">Passowort fehlt</string>
    <string name="missingKNum">K-Nummer fehlt</string>
    <string name="missinBoth">K-Nummer und Passwort fehlen</string>
    <string name="serverError">Verbindung gestört! Bitte erneut versuchen</string>
    <string name="unauthorizedLogin">Login/Logout fehlgeschlagen!</string>
    <string name="failedLogout">Logout fehlgeschlagen!</string>
    <string name="failedConnection">Verbindung fehlgeschlagen!</string>

    //file strings
    <string name="awpm_saved_data">awpm_saved_data</string>

    //tab strings
    <string name="katalogTab">KATALOG</string>
    <string name="wahlzettelTab">WAHLZETTEL</string>
    <string name="profiltab">PROFIL</string>


    //menue buttonStrings
    <string name="logout">Logout</string>
    <string name="wahlzeitraeume">Wahlzeiträume</string>
    <string name="links">Links</string>


    //ort strings
    <string name="ortWue">Würzburg</string>
    <string name="ortSw">Schweinfurt</string>
    <string name="ortShl">SHL</string>
    <string name="ortMuenz">Münzstr.</string>


    //filter strings
    <string name="topStringFilterActivity">AWPM-Liste filtern</string>
    <string name="auswaehlen">...</string>
    <string name="mich">mich</string>
    <string name="stringStudiengangBIN">BIN</string>
    <string name="stringStudiengangBWI">BWI</string>

    //filter strings checkboxen
    <string name="checkboxAktuellerZeitraum">Nur aktueller Wahlzeitraum</string>
    <string name="checkboxOrt">Nur Module in:</string>
    <string name="checkboxGesperrteModule">Gesperrte Module \nausblenden für:</string>
    <string name="checkboxVorgemerkte">Nur vorgemerkte Module anzeigen</string>

    //filter button
    <string name="filterButtonSpeichern">Auswahl speichern</string>
    <string name="filterButtonReset">Gesamtübersicht</string>

    //fragmentCourses button
    <string name="fragmentCoursesButton">Module Filtern</string>

    //content_courses_details strings
    <string name="favoritMarkieren">Als Favorit markieren</string>
    <string name="moduleWaehlen">Wählen</string>

    //ballot
    <string name="ballot_my_choice_title">Meine Wahl</string>
    <string name="ballot_favorite_title">Favoriten</string>
    <string name="ballot_no_choice">Sie haben noch kein \nModul gewählt</string>

    //profil
    <string name="profil_name">Name: </string>
    <string name="profil_subject_area">Studiengang: </string>
    <string name="profil_knumber">K-Nummer: </string>
    <string name="profil_email">E-Mail: </string>
    <string name="profil_a_title"> Akzeptiert </string>
    <string name="profil_a_subtitle"> Sie wurden noch für kein Modul zugelassen </string>
    <string name="profil_a_empty"> Kein Modul gefunden </string>





</resources>
