<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tollbar"
        android:theme="@style/Toolbarstyle"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:background="#ff8c00"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:scaleType="center"
        android:text="@string/login_text"
        android:gravity="center"
        android:height="40dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/k_nummer"
        android:inputType="textEmailAddress"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/k_num_hint"
        android:layout_marginTop="30dp" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_hint"
        android:id="@+id/password"
        android:layout_marginTop="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_confirmation"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



    </RelativeLayout>


</LinearLayout>