<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/global_info"
        android:visibility="visible"
        android:id="@+id/global_info"
        android:padding="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anmeldezeiträume"
        android:id="@+id/zeitraum"
        android:singleLine="true"
        android:textSize="20dp"
        android:layout_alignWithParentIfMissing="false"
        android:background="#ff8800"
        android:padding="5dp"
        android:layout_below="@+id/global_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_links"
        android:id="@+id/link_info"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        android:textSize="16dp"
        android:layout_below="@+id/zeitraum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_link_wue"
        android:id="@+id/info_button_wue"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/link_info"
        android:background="#ff8800"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignRight="@+id/infof_button_sw"
        android:layout_alignEnd="@+id/infof_button_sw"
        android:layout_alignLeft="@+id/infof_button_sw"
        android:layout_alignStart="@+id/infof_button_sw"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_link_sw"
        android:id="@+id/infof_button_sw"
        android:padding="5dp"
        android:background="#ff8800"
        android:layout_below="@+id/info_button_wue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:clickable="true" />
</RelativeLayout>