<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/awpm_logo"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal" />

            <EditText

                android:id="@+id/fragment_login_knumber"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/k_num_hint" />

            <EditText
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/pwd_hint"
                android:id="@+id/fragment_login_password" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/fragment_login_confirmation"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="right" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>