<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_profile_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ballot_my_choice_title"
                android:visibility="gone"
                android:id="@+id/textViewBallot"
                android:paddingTop="16dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone"
                android:gravity="center"
                android:text="@string/ballot_no_choice"
                android:id="@+id/textView_null_voted"
                android:paddingTop="16dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone"
                android:text=":'("
                android:textSize="32sp"
                android:id="@+id/textView_sad"
                android:paddingTop="2dp"
                android:layout_gravity="center_horizontal"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewC"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ballot_favorite_title"
                android:visibility="gone"
                android:id="@+id/textViewFavorite"
                android:paddingTop="16dp"
                android:layout_gravity="center_horizontal" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewF"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>




</RelativeLayout>