<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/profil_scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardBackgroundColor="#eee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/card_view_profil_imageViewAvatar"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                />

        <TextView
            android:id="@+id/card_view_profil_name"
            android:text="name"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="6dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/card_view_profil_imageViewAvatar"
            android:layout_toRightOf="@+id/card_view_profil_imageViewAvatar"
            android:layout_toEndOf="@+id/card_view_profil_imageViewAvatar"

            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/card_view_profil_knumber"
            android:text="@string/profil_knumber"
            android:textColor="#000"
            android:layout_below="@+id/card_view_profil_subject"
            android:layout_alignLeft="@+id/card_view_profil_name"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/card_view_profil_email"
                android:text="@string/profil_email"
                android:layout_below="@+id/card_view_profil_knumber"
                android:layout_alignLeft="@+id/card_view_profil_name"
                android:layout_marginTop="8dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/card_view_profil_subject"
                android:text="@string/profil_subject_area"
                android:textColor="#000"
                android:layout_below="@+id/card_view_profil_name"
                android:layout_alignLeft="@+id/card_view_profil_name"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card_view_profil_logout_button"
                android:src="@drawable/ic_exit_to_app_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/card_view_profil_email"

                />
            <!--android:src="@drawable/ic_person_black_24dp"-->

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:layout_toLeftOf="@+id/card_view_profil_logout_button"
                android:id="@+id/card_view_profil_calendar_button"
                android:src="@drawable/ic_perm_contact_calendar_black_24dp"
                android:layout_below="@+id/card_view_profil_email"
                />



        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/profil_a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_profil"
        android:text="@string/profil_a_title"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/profil_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_below="@id/card_view_profil"
                android:text="Kein Modul gefunden"
                android:layout_marginTop="64dp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/profil_empty_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_below="@id/card_view_profil"
                android:text="Sie wurden noch für kein Modul zugelassen"

                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewA"
        android:layout_below="@+id/profil_a_title"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>